--- a/CongCong_IOS/Base.lproj/Login_Register.storyboard
+++ b/CongCong_IOS/Base.lproj/Login_Register.storyboard
@@ -49,7 +49,7 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="请输入密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jSg-rN-Cdp">
                                 <rect key="frame" x="125" y="351" width="169" height="30"/>
                                 <attributedString key="attributedText"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                 <connections>
                                     <action selector="backTap:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="aEV-G5-VhS"/>
                                     <action selector="finishEdit:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="1mA-NQ-pac"/>
@@ -113,6 +113,7 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="groundImage" destination="em7-vc-Y4t" id="QDt-gV-FA5"/>
                         <outlet property="loginButton" destination="CcR-q5-XCc" id="7r7-Tm-fIV"/>
                         <outlet property="password" destination="jSg-rN-Cdp" id="d54-hc-yHc"/>
                         <outlet property="username" destination="NXd-0P-wEW" id="I1S-v0-h2L"/>
@@ -553,6 +554,9 @@
                                         </barButtonItem>
                                         <barButtonItem key="rightBarButtonItem" title="完成" id="4cA-hq-iRv">
                                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <action selector="backRoot:" destination="zQC-uL-Rsb" id="bPp-91-GrM"/>
+                                            </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
@@ -598,6 +602,9 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="P4Y-AQ-BJS">
+                                <rect key="frame" x="0.0" y="451" width="375" height="216"/>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
